# agri-voice-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  test_tts.py
app/: main.py
app/routers/: telegram.py  voice.py  voice_v2.py
app/services/: elevenlabs_tts.py  gemini_llm.py  gemini_stt.py  llm.py  stt.py  tts.py
