[project]
name = "kisan-voice-bot"
version = "2.0.0"
description = "Multilingual agricultural voice assistant for Indian farmers - Cloud Processing Pipeline"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = {text = "MIT"}
authors = [
    {name = "Aryan Thakur", email = "aryannnthakurrr@gmail.com"}
]
keywords = ["agriculture", "voice-bot", "indian-languages", "gemini", "elevenlabs", "telegram"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    # Gemini AI (STT + LLM)
    "google-genai>=1.0.0",
    # Text-to-Speech (ElevenLabs)
    "elevenlabs>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Aryannnthakurrr/agri-voice-bot"
Repository = "https://github.com/Aryannnthakurrr/agri-voice-bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]
